--- a/index.html
+++ b/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Social links profile</title>
+  <link rel="stylesheet" href="assets/styles/style.css" />
 
 </head>
+
 <body>
-<section class="container">
- 
-    <img src="./assets/images/avatar-jessica.jpeg" alt="">
-    <h1>Jéssica Randall</h1>
-    <h4>London, United Kingdom</h4>
-    <p>"Front-end developer and avid reader."</p>
-<div class="links">
-  <a href="#">GitHub</a>
-  <a href="#">Frontend Mentor</a>
-  <a href="#">LinkedIn</a>
-  <a href="#">Twitter</a>
-  <a href="#">Instagram</a>
-</div>
+  <main class="container">
+    <div class="container--Div">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="">
+      <div class= "titles">
+        <h1>Jéssica Randall</h1>
+      <h4>London, United Kingdom</h4>
+
+      </div>
+      <p>"Front-end developer and avid reader."</p>
+
+      <div class="links">
+        <a href="#">GitHub</a>
+        <a href="#">Frontend Mentor</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+      </div>
+
+    </div>
+  </main>
 
 
-  </section>
 
 
-
- 
   </div>
 </body>
+
 </html>
