--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 
 <body>
   <main class="container">
-    <div class="container--Div">
+    <div class="containerHome">
       <img src="./assets/images/avatar-jessica.jpeg" alt="">
-      <div class= "titles">
+      <div class="titles">
         <h1>Jéssica Randall</h1>
-      <h4>London, United Kingdom</h4>
+        <h4>London, United Kingdom</h4>
 
       </div>
       <p>"Front-end developer and avid reader."</p>
-
       <div class="links">
         <a href="#">GitHub</a>
         <a href="#">Frontend Mentor</a>
